Added the mqtt sub service and tls files needed for it
Signed-off-by: Fabian Arrotin <arrfab@centos.org>

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,3 +2,11 @@
   service: 
     name: stunnel 
     state: restarted
+
+- name: restart_reimzul
+  service:
+    name: "{{ item }}"
+    state: restarted
+  with_items:
+    - reimzul-notifier
+    - reimzul-mqtt-sub
