--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -20,6 +20,9 @@ reimzul_rsyncd_gid: reimzul
 # Generate it with `openssl rand -base64 30` 
 beanstalkd_key: uc+FoUhldhA6JqD0Wdj0L644KDwjHerbkPW8aosx
 
+# Which SCM/GIT server to pull sources from
+reimzul_git_url: https://git.centos.org
+
 # Default notifications settings for reimzul notifier
 reimzul_mail_notifications: False
 reimzul_mail_from: buildsys@mydomain.com
@@ -32,7 +35,10 @@ reimzul_mail_to:
       - me@mydomain.com
       - you@yourdomain.com
 
+# When using mqtt notification, it will use TLS auth, so you need valid cert
 reimzul_mqtt_notifications: False
 reimzul_mqtt_broker: mqtt.yourdomain.com
-reimzul_mqtt_user: myuser
-reimzul_mqtt_pass: mypass
+reimzul_mqtt_tls_ca_cert: 
+reimzul_mqtt_tls_cert: 
+reimzul_mqtt_tls_key:
+reimzul_mqtt_topic: reimzul  # parent topic then builds/results and submit/$arch
